# shost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cli/: CMakeLists.txt  cli.cpp  main.cpp
cmake/: Findlibftdi1.cmake  Findlibmpsse.cmake
doc/: INSTALL.md
inc/: I2C.h  Protocol.h  SPI.h  cli.h  i2c.h  mpsse-cli.h  spi.h
lib/: CMakeLists.txt  I2C.cpp  I2C.h  Protocol.cpp  Protocol.h  SPI.cpp  SPI.h  config.h  shost.cpp  shost.h  version.h  xfer.cpp  xfer.h
src/: I2C.cpp  Protocol.cpp  SPI.cpp  cli.c  cli.cpp  i2c.c  main.c  main.cpp  mpsse-cli.c  mpsse-cli.cpp  spi.c  util.c  util.cpp  util.h  xfer.c  xfer.h
